# Inter-domain-routing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Inter-domain-routing.pro  LinkPriorityQueue.cpp  LinkPriorityQueue.h  Network.cpp  Network.h  Node.h  StatsTable.cpp  attributes.py  link.py  main.cpp  network.py  node.py  relationship.py
src/backend/: Link.h  Network.cpp  Network.h  NetworkIdGenerator.cpp  NetworkIdGenerator.h  StatsTable.cpp  StatsTable.h  hopcountstable.cpp  hopcountstable.h  pathtype.h  pathtypestable.h
src/frontend/: hopcountsdialog.cpp  hopcountsdialog.h  hopcountsdialog.ui  hopcountsplot.cpp  hopcountsplot.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathtypesdialog.cpp  pathtypesdialog.h  pathtypesdialog.ui  pathtypesplot.cpp  pathtypesplot.h  statsdialog.cpp  statsdialog.h  statsdialog.ui  statsplot.cpp  statsplot.h  tablewidget.cpp  tablewidget.h
src/testfiles/: BIGDATA.txt  hello.txt  test.py
src/tests/: test_attributes.py  test_network.py
tests/: enunciado_ext1.txt  enunciado_top.txt  network.cpp  small.txt
